--- a/style.css
+++ b/style.css
@@ -3,3 +3,27 @@
     margin: 10px;
     padding: 10px;
 }
+
+#game-container {
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: space-between;
+}
+
+.player-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.card-container {
+    display: flex;
+    justify-content: center;
+}
+
+.card {
+    max-width: 50px;
+}
+
+h1, h3 {
+    text-align: center;
+}
