--- a/style.css
+++ b/style.css
@@ -1,27 +1,35 @@
 * {
-    border: 1px blue solid;
-    margin: 10px;
-    padding: 10px;
+    /* border: 1px white solid; */
+    margin: 5px;
+    padding: 5px;
+    color: white;
 }
 
 #game-container {
     display: flex;
     /* flex-direction: column; */
-    justify-content: space-between;
+    justify-content: center;
+    flex-wrap: wrap;
+
 }
 
 .player-container {
     display: flex;
     flex-direction: column;
+    border: 1px white solid;
+
 }
 
 .card-container {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .card {
     max-width: 50px;
+    border: none;
+    filter: invert(99%) sepia(99%) saturate(2%) hue-rotate(220deg) brightness(104%) contrast(100%);
 }
 
 h1, h2, h3 {
@@ -35,8 +43,20 @@ h1, h2, h3 {
 
 .score-block {
     border-radius: 25px;
+    border: 1px white solid;
+    
 }
 
 .score-block-filled {
-    background-color: blue;
+    background-color: white;
+    border: 1px white solid;
+
+}
+
+body {
+    background-image: url(./IMG/blue-gradient-background.jpg)
+}
+
+#result-text {
+    text-align: center;
 }
