--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: column;
     border: 1px white solid;
+    border-radius: 10px;
 
 }
 
@@ -30,6 +31,14 @@
     max-width: 50px;
     border: none;
     filter: invert(99%) sepia(99%) saturate(2%) hue-rotate(220deg) brightness(104%) contrast(100%);
+}
+
+.player-card {
+    transition: transform 150ms;
+}
+
+.player-card:hover {
+    transform: scale(1.1);
 }
 
 h1, h2, h3 {
@@ -60,3 +69,4 @@ body {
 #result-text {
     text-align: center;
 }
+
