--- a/style.css
+++ b/style.css
@@ -82,3 +82,12 @@ body {
     text-align: center;
     border-radius: 10px;
 }
+
+.fade-transition {
+    transition: opacity 2s;
+    opacity: 0%;
+}
+
+/* .fade-transition:hover {
+    opacity: 0%
+} */
