--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@
 
 #game-container {
     display: flex;
-   
     justify-content: center;
     flex-wrap: wrap;
 
 }
 
-.player-container {
+/* Refers to any player, not just humans */
+.container {
     display: flex;
     flex-direction: column;
     border: 1px white solid;
@@ -34,11 +34,12 @@
     filter: invert(99%) sepia(99%) saturate(2%) hue-rotate(220deg) brightness(104%) contrast(100%);
 }
 
-.hover-transition {
+.player-card {
+    cursor: pointer;
     transition: transform 150ms;
 }
 
-.hover-transition:hover {
+.player-card:hover {
     transform: scale(1.1);
 }
 
@@ -89,11 +90,12 @@ body {
 }
 
 .fade-transition {
-    transition: opacity 150ms;
+    /* transition: opacity 150ms; */
+    transition: transform 1000ms;
     opacity: 0%;
 }
 
-.fade-transition:hover {
+/* .fade-transition:hover {
     opacity: 0%
-}
+} */
 
